[tool.poetry]
name = "turbo-barnacle"
version = "0.1.0"
description = ""
authors = ["vitortamberlini <“vitor.tamberlini@routable.com”>"]
readme = "README.md"
packages = [{include = "turbo_barnacle"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
